# Peregrine

./: .gitignore  LICENSE.md  README.md  environment.yml  pyproject.toml
data/testing_data/: README.md
data/testing_data/InitialTests/: AromaticSandwich.mol  AromaticSandwichUFF.mol  BIHGEE-S4_opt0_SOAPDes.mol  benzene.mol  benzene_water_cation.mol
data/testing_data/PySCFTests/: Benzene_PySCFOutput.fock  Benzene_PySCFOutput.meta.json  WaterCation_PySCFOutput.fock  WaterCation_PySCFOutput.meta.json  WaterTriplet_PySCFOutput.fock  WaterTriplet_PySCFOutput.meta.json  benzene_calc.py  water_cation_calc.py  water_triplet_calc.py
data/testing_data/ReadORCA6Outputs/: CoIILig-S2_XRD-Structures.mol2  CoIILig-S4_XRD-Structures.mol2
src/MLP/: BuildMLP.py  __init__.py  get_descriptors.py
src/Peregrine/: atom.py  molecule.py  moleculeset.py
src/peregrine/: atom.py  molecule.py  moleculeset.py
tests/: AromaticSandwich.mol  benzene.mol  benzene_stripped.mol  benzene_water_cation.mol  test_molecule.py  test_molecule_QC_input_output.py  test_molecule_SMARTS_handling.py  test_molecule_core_functions.py  test_moleculeset_ReadORCA6Output.py  test_moleculeset_core_functions.py  water_cation.mol  water_triplet.mol
tests/TS/: RadicalButene.mol
tests/TS/BH9/: 01_3TS.xyz  01_9TS.xyz  03_7TS.xyz  HalAbstract_Reac.mol  HalAbstract_TS.mol  Pericyclic32_Prod.mol  Pericyclic32_Reac.mol  Pericyclic32_TS.mol  Pericyclic42_Reac.mol  Pericyclic42_TS.mol  RadicalAddition_Prod.mol  RadicalAddition_Reac.mol  RadicalAddition_TS.mol  RadicalRearrangment_Prod.mol  RadicalRearrangment_Reac.mol  (+1 more)
(+2215 files in other folders)
