[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Peregrine"
version = "1.0.0"
description = "High-throughput computational chemistry workflows"
requires-python = "3.12"
dependencies = [
    "numpy",
]

[tool.hatch.build.targets.wheel]
packages = ["src/Peregrine"]